[package]
name = "rpi-epaper-mqtt-receiver"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libepd = { path = "libepd" }
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5"
serde_json = "1.0"
rumqtt = "0.31.0"
rand = "0.7.3"