[package]
name = "libepd"
version = "0.1.0"
authors = ["pi"]
build = "build.rs"
edition = "2018"
links = "bcm2835"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = [ "parallel" ] }
pkg-config = "0.3"
